NV-8 Fix IdeaFilter spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -85,7 +85,7 @@ a:-webkit-any-link {
     text-align: center;
   }
   &-subtitle {
-    padding: 20px 0;
+    margin: 20px 0;
     text-align: center;
     font-style: italic;
   }
@@ -93,7 +93,15 @@ a:-webkit-any-link {
     padding: 20px 0;
   }
   &-filter {
-    padding: 5px 0 10px 0;
+    margin: 30px 0 40px 0;
+    &-container {
+      display: flex;
+      flex-wrap: wrap;
+      margin: -10px;
+      & > .filter {
+        margin: 10px;
+      }
+    }
   }
 }
 @media screen and (min-width: 768px) {
@@ -107,7 +115,13 @@ a:-webkit-any-link {
       font-size: 18px;
     }
     &-filter {
-      padding: 20px 0 30px 0;
+      margin: 50px 0 60px 0;
+      &-container {
+        margin: 0;
+        & > .filter {
+          margin: 0;
+        }
+      }
     }
   }
 }
